# cirrus

./: .gitignore  pyproject.toml  setup.py
cirrus/: data.py  histogram.py  preprocess.py  produce.py  scale.py  training_utils.py
tests/: conftest.py  test_data.py
