[tool.poetry]
name = "cirrus"
version = "0.1.0"
description = ""
authors = ["Felix Richards <felixarichards@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
astropy = "==4.2"
numpy = ">=1.20.1"
matplotlib = "==3.3.4"
opencv-python = "==4.5.1.48"
Pillow = "==8.1.2"
python-dotenv = "==0.10.1"
scipy = ">=1.6.2"
torch = "==1.8.0"
torchvision = "==0.9.0"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"