[tool.poetry]
name = "cirrus"
version = "0.1.0"
description = ""
authors = ["Felix Richards <felixarichards@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.20.1"
torch = ">=1.8.0"
torchvision = ">=0.9.0"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=50.0.0"]
build-backend = "poetry.core.masonry.api"